--- a/index.html
+++ b/index.html
@@ -23,22 +23,28 @@
         </video>
 
         <!-- search bar -->
-        <div class="row">
-            <form>
-                <input type="search" placeholder="Search by location" id="search">
-            </form>
-        </div>
+        <div class="wrapper">
+            <div class="container">
+                <div class="search-container">
+                    <div class="row">
+                        <form>
+                            <input type="search" placeholder="Search by location" id="search">
+                        </form>
+                    </div>
 
-        <!-- location and temperature -->
-        <div class="weather-card">
-            <div class="row" id="weather">
-                <div>
-                    <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="">
-                </div>
+                    <!-- location and temperature -->
+                    <div class="weather-card">
+                        <div class="row" id="weather">
+                            <div>
+                                <img src="https://openweathermap.org/img/wn/04n@2x.png" alt="">
+                            </div>
 
-                <div>
-                    <h2>32 °C</h2>
-                    <h4>Clear</h4>
+                            <div>
+                                <h2>32 °C</h2>
+                                <h4>Clear</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
