--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                             </div>
 
                             <div>
-                                <h2>32 °C</h2>
-                                <h4>Clear</h4>
+                                <h2>no</h2>
+                                <h4>location</h4>
                             </div>
                         </div>
                     </div>
