In Weather app logo (home -> index.html)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="left">
         <img src="/img/weatherLogo.jpeg" alt="">
-        <div><a href="home.html">Weather App</a></div>
+        <div><a href="index.html">Weather App</a></div>
     </div>
 
     <main>
