--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="left">
-        <img src="/img/weatherLogo.jpeg" alt="">
+        <img src="/img/weatherLogo.jpeg" alt="logo">
         <div><a href="index.html">Weather App</a></div>
     </div>
 
